# forbidden-memories-player

./: README.md  main.py  pyproject.toml
card-finder-mcp/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  sift.py  test_sift_matching.py
multimedia/: cards-name.txt
