[project]
name = "card-finder-mcp"
version = "0.1.0"
description = "Yu Gi Oh! card finder using SIFT"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.0",
    "opencv-python>=4.8.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["card-finder-mcp"]
